# UnityThreadOptimizer

./: CMakeLists.txt  README.md
src/: dllmain.cpp
unityplayer-file/: original_func.txt
